# django-mssql-cold-start-retry

./: .gitignore  README.md  pyproject.toml
django_mssql_retry/: __init__.py  decorator.py  middleware.py
